<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="@drawable/birthdaycandles" >

    <ImageView 
        android:id="@+id/mainImage"
        android:contentDescription="@string/cdMainImage"
        android:src="@drawable/main_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"/>
    
    <Button
        android:id="@+id/main_buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainImage"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonAdd"
        android:onClick="addPerson" />
    <Button
        android:id="@+id/main_buttonToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_buttonAdd"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonToday"
        android:onClick="listBirthdays" />
    <Button
        android:id="@+id/main_buttonAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_buttonToday"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonAll"
        android:onClick="listBirthdays" />
    <Button
        android:id="@+id/main_buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_buttonAll"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonSettings"
        android:onClick="listSettings" />

</RelativeLayout>